--- a/Campsite.Rmd
+++ b/Campsite.Rmd
@@ -19,12 +19,22 @@ library(macleish)
 library(sf)
 library(leaflet)
 library(dplyr)
+library(lwgeom)
 ```
 
 ```{r Code, message=FALSE}
+
 my_points <- tribble(
   ~point, ~lat, ~lon,
-  "A",  42.448483, -72.675119
+  "A",  42.448483, -72.675119)
+
+#icons from https://www.nps.gov/maps/tools/symbol-library/
+
+new_campsite_icon <- icons(
+  iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg")
+
+stream_x_icon <- icons(
+  iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/wading-black-22.svg"
 )
 
 macleish_layers %>%
@@ -61,9 +71,7 @@ leaflet() %>%
   addTiles() %>%
   addPolylines(data = pluck(macleish_layers, "streams")) %>%
   addPolylines(data = pluck(macleish_layers, "trails"), color = "brown") %>%
-  addMarkers(data = st_cast(trail_stream_xings, "POINT"), popup = ~name)
-
-
+  addMarkers(data = st_cast(trail_stream_xings, "POINT"), icon = stream_x_icon, popup = ~name)
 
 stream_buffer <- macleish_layers %>%
   pluck("streams") %>%
@@ -75,7 +83,9 @@ leaflet() %>%
   addTiles() %>%
   addPolylines(data = pluck(macleish_layers, "streams"), 
                weight = 1, color = "black") %>%
-  addPolygons(data = stream_buffer) 
+  addPolygons(data = stream_buffer) %>% 
+  addMarkers(data = my_points, icon = new_campsite_icon)
+
   
 ```
 
