--- a/Campsite.Rmd
+++ b/Campsite.Rmd
@@ -29,9 +29,9 @@ new_campsite <- tribble(
   42.448483, -72.675119)
 
 existing_campsites <- tribble(
-  ~lat, ~lon,
-   42.450933, -72.677843,
-   42.458811, -72.680851)
+  ~name, ~lat, ~lon,
+  "Group campsite", 42.450933, -72.677843,
+   "Remote campsite", 42.458811, -72.680851)
 
 #icons from https://www.nps.gov/maps/tools/symbol-library/
 
@@ -41,12 +41,8 @@ new_campsite_icon <- icons(
 existing_campsite_icon <- icons(
   iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg")
 
-stream_x_icon <- icons(
-  iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/wading-black-22.svg")
-
 html_legend <- "<img src='https://www.nps.gov/maps/tools/symbol-library/assets/img/campground-black-22.svg'>New campsite<br/>
-<img src='https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg'>Existing campsite<br/>
-<img src = 'https://www.nps.gov/maps/tools/symbol-library/assets/img/wading-black-22.svg'>Stream crossing"
+<img src='https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg'>Existing campsite"
 
 macleish_layers %>%
   pluck("trails") %>%
@@ -74,16 +70,6 @@ macleish_layers %>%
   pluck("trails") %>%
   st_crosses(pluck(macleish_layers, "streams"))
 
-trail_stream_xings <- macleish_layers %>%
-  pluck("trails") %>%
-  st_intersection(pluck(macleish_layers, "streams"))
-
-leaflet() %>%
-  addTiles() %>%
-  addPolylines(data = pluck(macleish_layers, "streams")) %>%
-  addPolylines(data = pluck(macleish_layers, "trails"), color = "brown") %>%
-  addMarkers(data = st_cast(trail_stream_xings, "POINT"), icon = stream_x_icon, popup = ~name)%>%
-  addControl(html = html_legend, position = "bottomleft")
 
 stream_buffer <- macleish_layers %>%
   pluck("streams") %>%
@@ -96,8 +82,9 @@ leaflet() %>%
   addPolylines(data = pluck(macleish_layers, "streams"), 
                weight = 1, color = "black") %>%
   addPolygons(data = stream_buffer) %>% 
+  addPolylines(data = pluck(macleish_layers, "trails"), color = "brown") %>%
   addMarkers(data = new_campsite, icon = new_campsite_icon, popup = "Proposed campsite") %>%
-  addMarkers(data = existing_campsites, icon = existing_campsite_icon, popup = "Existing campsite")%>%
+  addMarkers(data = existing_campsites, icon = existing_campsite_icon, popup = ~name)%>%
   addControl(html = html_legend, position = "bottomleft")
 
 
