--- a/Campsite.Rmd
+++ b/Campsite.Rmd
@@ -13,20 +13,22 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-```{r StartingItems, message=FALSE}
+```{r StartingItems, message=FALSE, warning = FALSE}
 library(tidyverse)
 library(macleish)
 library(sf)
 library(leaflet)
 library(dplyr)
 library(lwgeom)
+devtools::install_github("benmarwick/wordcountaddin")
 ```
 
-```{r Code, message=FALSE}
+```{r Code, message=FALSE, warning = FALSE}
 
-new_campsite <- tribble(
-  ~lat, ~lon,
-  42.448483, -72.675119)
+new_campsite<- tribble(
+  ~name, ~lat, ~lon,
+  "New campsite 1", 42.448483, -72.675119,
+  "New campsite 2", 42.447339, -72.675275)
 
 existing_campsites <- tribble(
   ~name, ~lat, ~lon,
@@ -40,6 +42,7 @@ new_campsite_icon <- icons(
 
 existing_campsite_icon <- icons(
   iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg")
+
 
 html_legend <- "<img src='https://www.nps.gov/maps/tools/symbol-library/assets/img/campground-black-22.svg'>Proposed campsite<br/>
 <img src='https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg'>Existing campsite"
@@ -83,7 +86,7 @@ leaflet() %>%
                weight = 1, color = "black") %>%
   addPolygons(data = stream_buffer) %>% 
   addPolylines(data = pluck(macleish_layers, "trails"), color = "brown") %>%
-  addMarkers(data = new_campsite, icon = new_campsite_icon, popup = "Proposed campsite") %>%
+  addMarkers(data = new_campsite, icon = new_campsite_icon, popup = "Proposed campsites") %>%
   addMarkers(data = existing_campsites, icon = existing_campsite_icon, popup = ~name)%>%
   addControl(html = html_legend, position = "bottomleft")
 
