--- a/Campsite.Rmd
+++ b/Campsite.Rmd
@@ -40,10 +40,10 @@ existing_campsites <- tribble(
 #icons from https://www.nps.gov/maps/tools/symbol-library/
 
 new_campsite_icon <- icons(
-  iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/campground-black-22.svg")
+  iconUrl = "campgroundLines.png")
 
 existing_campsite_icon <- icons(
-  iconUrl = "https://www.nps.gov/maps/tools/symbol-library/assets/img/campsite-black-22.svg")
+  iconUrl = "campsiteNoLines.png")
 
 
 
