--- a/Campsite.Rmd
+++ b/Campsite.Rmd
@@ -23,7 +23,21 @@ library(wordcountaddin)
 
 > Word count: `r wordcountaddin::word_count()`
 
-# words
+##### Smith College’s [Ada and Archibald Macleish Field Station](https://smithceeds.wordpress.com/tag/field-station/) encompasses 243 acres in the hills of Whately Massachusetts. It facilitates student and faculty environmental research, outdoor education, wildlife habitat protection and outdoor recreational space.  The space was dedicated for this purpose in 2008, in honor of Ada and Archibald Macleish, who were close friends of the school’s first woman president and had a passion for the environment. Macleish hosts a wide variety of student research and involvement in ongoing projects, including mushroom inoculation, statistics classes, and even [choreography](https://www.smith.edu/insight/stories/macleish_sidebar.php). The property has approximately six miles of hiking trails and two campsites, built primarily by student employees and volunteers.
+
+
+##### For our mini project we decided to find an area to build a third campsite that would fit Paul Wetzel’s criteria.  We have indicated on our map where it would be located (in the southeast corner of the property). We are proposing two options in the same general region. The northern site could be accessed by extending the south western tip of the Orange Newt Trail. Please note that the Orange Newt Trail was only build within the last couple years and is not yet included in the Macleish R package. The second location is in the southern part of the area and would be closer to the central parking lot, but would require building about half a mile of new trail.
+
+
+##### We chose this region of Macleish for several reasons. Either site would be  roughly half a mile away from the parking area and in close proximity of a stream (within 200 feet). The region has relatively flat topography, in an area of black birch forest, which is different than the existing sites, it is 500 feet away from the challenge course and is in an isolated part of the property far from the other sites, roadways or other human activity.  We have provided two options in the same general area for several reasons. Although the locations are approximately the same distance from the parking area, the southern site would have a more direct route. We also considered the possibility that the region could be on a flood plain, near sensitive local populations of known plants, animals or cultural/historic locations.  These two options would allow some flexibility if any of these issues arises. Either of these options would require little to no regular maintenance once initial construction is completed.
+
+
+##### According to Paul Wetzel, Manager of the Macleish field station, the cost of building one mile of trail is approximately $8370 ( “3 students, 18 days, 7 hrs/d = $5670, plus $2000 for supervisor, plus supplies (bridges, swamp walkways, trail markers) of $700”). Campsites vary in degree of development and complexity. The construction of all campsites requires some tree pruning and work removing rocks and downed trees. A “bare-bones” campsite (“with no structures, benches or tables) costs about $400 (two students, $15/hour for one day to build fire pit, grub area; plus money for signage and a few supplies”) (Paul Wetzel). For a more complex campsite, we would add $500 for a table, $6000 for a shelter (labor & supplies) and if tent platforms are added, add $300 each. The two sites would require the same funding for the campsite, but we offer two different lengths of trail required to reach the locations depending on budgets.
+
+##### More than 200 of the 260 acres of the field station are in “permanent Conservation Restriction” held by the [Kestrel Land Trust](https://www.kestreltrust.org/places/macleish-field-station/). Any development work on new trail or campsites in any of those protected area must be reviewed and approved by them before moving forward with the project. In addition to this, “local” environmental impacts such as erosion much be taken into consideration.
+
+##### The major roadblocks for these types of projects are finding time to prioritize the work and working with all of the stakeholders (outdoor programs, researchers, faculty, staff…) to find sites and trail locations that provide desired amenities or access without interfering with research or disturbing ongoing projects (Reid Bertone-Johnson).  Our proposed site locations would address all of these issues and fit the criteria given.  We recommend that the Macleish management consider our proposed locations for their next campsite.
+
 
 ```{r Code, message=FALSE, warning = FALSE}
 
